--- a/my-app/src/App.scss
+++ b/my-app/src/App.scss
@@ -18,41 +18,22 @@ $background-color: #f0f0f0;
 $header-font: 'Inter';
 $body-font: 'Alte';
 
-.App {
-  text-align: center;
+#root {
+  background-color: $background-color;
+  border: 1px solid black;
+  height: 100vh;
+  width: 400vw;
+  overflow-x: scroll;
+  overflow-y: hidden;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+h1, h2, h3 {
+  font-family: $header-font;
+  font-weight: bold;
+  color: $primary-color;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+h4, h5, h6, p {
+  font-family: $body-font;
+  color: $secondary-color;
 }
