working on mobile nav

--- a/my-app/src/components/Sidebar/index.scss
+++ b/my-app/src/components/Sidebar/index.scss
@@ -5,24 +5,58 @@
 @media (max-width: 767px) {
     .nav-daddy {
         background-color: $background-color;
-        border: 1px solid $primary-color;
-        width: 100vw;
-        height: 60px;
+        border-bottom: 1px solid $primary-color;
+        width: 90vw;
+        height: 100px;
         position: absolute;
         top: 0;
         z-index: 99;
         overflow-y: none;
-        padding: 40px 20px;
+        padding: 5px 20px;
     }
     .nav-bar {
+        width: 100%;
+        padding: 0;
+        display: flex;
+    }
+    .link-tree {
+        width: 50%;
+        padding: 0px auto;
+        margin-left: -80px
+    }
+    .link-tree li {
+        display: inline-block;
+    }
+    .link-tree li:first-child {
+        padding-right: 10px;
+    }
+    .logo img {
+        margin: 0px auto;
+        width: 50%;
+    }
+
+    .social {
+        position: absolute;
         display: block;
+        top: 15px;
+        right: 10px;
+        list-style-type: none;
+        margin: auto;
     }
     
+    .social li {
+        font-size: 30px;
+        display: block;
+    }
+    .social li:first-child {
+        padding-right: 5px;
+    }
 }
 @media (min-width: 768px) {
     .nav-daddy {
         background-color: $background-color;
-        border: 1px solid $primary-color;
+        border-bottom: none;
+        border-right: 1px solid $primary-color;
         width: 8vw;
         height: 100vh;
         position: relative;
@@ -34,6 +68,33 @@
     .nav-bar {
         display: block;
     }
+    .logo img {
+        display: block;
+        margin: 8px auto;
+        width: 100%;
+    }
+    .nav-link {
+        padding: 10px 0;
+    }
+    .social {
+        position: absolute;
+        display: block;
+        bottom:80px;
+        list-style-type: none;
+        margin: auto;
+    }
+    
+    .social li {
+        font-size: 30px;
+        display: inline-block;
+    }
+    .social li:first-child {
+        padding-right: 5px;
+    }
+}
+.link-tree {
+    list-style-type: none;
+    padding-left: 0;
 }
 
 .logo {
@@ -41,10 +102,11 @@
     padding: 8px 0;
 }
 
-.logo img {
-    display: block;
-    margin: 8px auto;
-    width: 100%;
+.logo:hover img {
+    box-sizing: border-box;
+    transition: ease-in .07s;
+    border: 2px solid $primary-color;
+    margin-bottom: 7.75px
 }
 
 .nav-link {
@@ -53,7 +115,6 @@
     color: $primary-color;
     font-size: 14px;
     text-transform: uppercase;
-    padding: 10px 0;
     text-decoration: none;
 }
 .nav-link.about:hover, .nav-link.about.active {
@@ -89,20 +150,13 @@
     padding-left: 1.5px
 }
 
-.nav-daddy .social {
-    position: absolute;
-    bottom:80px;
-    list-style-type: none;
-    margin: auto;
-}
-
-.nav-daddy .social li {
-    font-size: 30px;
-    display: inline-block;
-}
-.nav-daddy .social li:first-child {
-    padding-right: 5px;
-}
-.nav-daddy .social li a {
+.social li a {
     color: $primary-color
 }
+.social li:first-child a:hover {
+    color: $pink;
+}
+.social li:last-child a:hover {
+    color: $yellow;
+}
+
