--- a/my-app/src/components/Layout/index.scss
+++ b/my-app/src/components/Layout/index.scss
@@ -1,7 +1,7 @@
 @import '../../App.scss';
 
 .page {
-    width: 400vh;
+    width: 100vw;
     height: 100vh;
     position: absolute;
 }
@@ -22,4 +22,18 @@
     bottom: 0;
     left: 120px;
     font-size: 18px;
+}
+
+.container {
+    width: 100vw;
+    will-change: contents;
+    height: 100vh;
+    min-height: 566px;
+    position: absolute;
+    opacity: 0.5;
+    top: 5%;
+    margin: 0 auto;
+    z-index: 1;
+    transform-style: preserve-3d;
+    animation: fadeIn 1s forwards;
 }
