--- a/my-app/src/App.scss
+++ b/my-app/src/App.scss
@@ -32,7 +32,8 @@ $body-font: 'Alte', sans-serif;
   width: 400vw;
   overflow-x: scroll;
   overflow-y: hidden;
-  display: flex
+  display: flex;
+  flex-wrap: nowrap;
 }
 
 h1, h2, h3 {
@@ -41,4 +42,113 @@ h1, h2, h3 {
 
 h4, h5, h6, p {
   font-weight: bold;
+}
+
+.text-zone {
+  position: absolute;
+  left: 10%;
+  top: 10%;
+  // transform: translateY(-50%);
+  // width: 40%;
+}
+
+.about-page {
+  .text-zone {
+    left: 10%
+  }
+}
+
+.stage-cube-cont {
+  width: 50%;
+  height: 100%;
+  top: 0;
+  padding-top: 18%;
+  margin-left: 0;
+  position: absolute;
+  right: 0;
+  overflow: hidden;
+}
+
+.cube-spinner {
+  animation-name: spincube;
+  animation-timing-function: ease-in-out;
+  animation-iteration-count: infinite;
+  animation-duration: 12s;
+  transform-style: preserve-3d;
+  transform-origin : 100px 100px 0;
+  margin-left: calc(50% - 100px);
+  height: 200px;
+  width: 200px;
+
+  div {
+    position: absolute;
+    width: 200px;
+    height: 200px;
+    // background: rgba(255,255,255,0.4);
+    margin: 0 auto;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    box-shadow: 0 0 20px 0px $pink;
+  }
+
+  .face1 {
+    transform: translateZ(100px)
+  }
+  .face2 {
+    transform: rotateY(90deg) translateZ(100px)
+  }
+  .face3 {
+    transform: rotateY(90deg) rotateX(90deg) translateZ(100px)
+  }
+  .face4 {
+    transform: rotateY(180deg) rotateZ(90deg) translateZ(100px)
+  }
+  .face5 {
+    transform: rotateY(-90deg) rotateZ(90deg) translateZ(100px)
+  }
+  .face6 {
+    transform: rotateX(-90deg) translateZ(100px)
+  }
+}
+
+@keyframes spincube {
+  from,
+  to {
+    transform: rotateX(0deg) rotateY(0deg) rotateZ(0deg);
+  }
+  16% {
+    transform: rotateY(-90deg)
+  }
+  33% {
+    transform: rotateY(-90deg) rotateZ(90deg)
+  }
+  50% {
+    transform: rotateY(-180deg) rotateZ(90deg)
+  }
+  66% {
+    transform: rotateY(-270deg) rotateZ(90deg)
+  }
+  83% {
+    transform: rotateX(-90deg) rotateZ(90deg)
+  }
+}
+
+.face1 {
+  background-color: $green
+}
+.face2 {
+  background-color: $orange
+}
+.face3 {
+  background-color: $pink
+}
+.face4 {
+  background-color: $blue
+}
+.face5 {
+  background-color: $yellow
+}
+.face6 {
+  background-color: $white
 }
