--- a/my-app/src/App.scss
+++ b/my-app/src/App.scss
@@ -1,4 +1,5 @@
 @import 'animate.css';
+@import '~loaders.css/src/animations/pacman.scss';
 
 // primary colors and typography
 $primary-color: #000;
@@ -151,4 +152,18 @@ h4, h5, h6, p {
 }
 .face6 {
   background-color: $white
+}
+
+.loader-active {
+  display: block;
+  position: absolute;
+  left: 0;
+  right: 0;
+  margin: auto;
+  top: 0;
+  bottom: 0;
+  width: 50px;
+  height: 50px;
+  animation: fadeOut 1.25s 1s;
+  animation-fill-mode: forwards;
 }
