--- a/my-app/src/App.scss
+++ b/my-app/src/App.scss
@@ -181,3 +181,78 @@ h4, h5, h6, p {
   from {transform:rotate(0deg); opacity: 1;}
   to {transform:rotate(360deg); opacity: 0;}
 }
+
+.contact-form {
+  width: 100%;
+  margin-top: 20px;
+ 
+  ul {
+    padding: 0;
+    margin: 0
+
+    li {
+      padding: 0;
+      margin: 0;
+      list-style: none;
+      margin-bottom: 10px;
+      overflow: hidden;
+      display: block;
+      position: relative;
+      opacity: 0;
+      animation: fadeInUp 2s 2s;
+      animation-fill-mode: forwards;
+      clear: both;
+    }
+
+    li.half {
+      width: 49%;
+      clear: none;
+
+      &:last-child {
+        margin-left: 2%;
+    }
+  }
+  }
+
+  input[type="text"], 
+  input[type="email"] {
+    width: 100%;
+    border: 0;
+    background: $white;
+    height: 50px;
+    font-size: 18px;
+    color: #000;
+    padding: 0 20px;
+    box-sizing: border-box;
+  }
+
+  textarea {
+      width: 100%;
+      border: 0;
+      background: $white;
+      min-height: 100px;
+      font-size: 18px;
+      color: #000;
+      padding: 20px;
+      box-sizing: border-box;
+  }
+
+  .flat-button {
+    color: #000;
+    background-color: $yellow;
+    font-size: 16px;
+    text-transform: uppercase;
+    letter-spacing: 2px;
+    text-decoration: none;
+    padding: 8px 10px;
+    border: 2px solid #000;
+    border-radius: 3px;
+  }
+
+  .flat-button:hover {
+    color: #fff;
+    background-color: $orange;
+    border: 2px solid #fff;
+    border-radius: 1px;
+  }
+}
