added scroller svg

--- a/my-app/src/components/Sidebar/index.scss
+++ b/my-app/src/components/Sidebar/index.scss
@@ -394,7 +394,11 @@
   .face4 img {
     background-color: $white;
   }
+  .face5 img {
+    rotate: -180deg;
+  }
   .face6 img {
     background-color: $white;
+    rotate: -90deg;
   }
 //end spincube logo
