--- a/my-app/src/components/Layout/index.scss
+++ b/my-app/src/components/Layout/index.scss
@@ -58,3 +58,26 @@
     display: flex;
     flex-direction: column;
 }
+
+
+//start test
+* {
+    box-sizing: border-box;
+    padding:0;
+    margin:0;
+  }
+  
+  li {
+    width:100%;
+    height:100vh;
+    display:flex;
+    align-items: center;
+    justify-content: center;
+  }
+  
+  .page {
+    width: 300%;
+    height: 100vh;
+    display: flex;
+   }
+//end test
