--- a/my-app/src/App.scss
+++ b/my-app/src/App.scss
@@ -4,7 +4,7 @@
 // primary colors and typography
 $primary-color: #000;
 $secondary-color: #666;
-$background-color: #f0f0f0;
+$background-color: #fafafa;
 
 $green: #009c73;
 $blue: #2b93d1;
@@ -29,7 +29,6 @@ $body-font: 'Alte', sans-serif;
 
 #root {
   background-color: $background-color;
-  border: 1px solid black;
   height: cald(100vh);
   width: 400vw;
   overflow: hidden;
