--- a/my-app/src/components/Layout/index.scss
+++ b/my-app/src/components/Layout/index.scss
@@ -31,8 +31,8 @@
     min-height: 566px;
     // position: absolute;
     opacity: 0.5;
-    top: 0%;
-    margin: 0 auto;
+    // margin-left: 5%;
+    margin: .25% 0 0 5%;
     z-index: 1;
     transform-style: preserve-3d;
     animation: fadeIn 1s forwards;
@@ -81,3 +81,20 @@
     display: flex;
    }
 //end test
+
+//colorful backgrounds
+.parent li:first-child {
+    background-color: #009c73
+}
+
+.parent li:nth-child(2n) {
+    background-color: #ffd800;
+}
+
+.parent li:nth-child(3n) {
+    background-color: #e65925;
+}
+
+.parent li:last-child {
+    background-color: #2b93d1;
+}
