--- a/my-app/src/components/Sidebar/index.scss
+++ b/my-app/src/components/Sidebar/index.scss
@@ -73,7 +73,7 @@
     }
     .logo img {
         display: block;
-        margin: 8px auto;
+        margin: 4px auto;
         width: 100%;
     }
     .link-tree {
@@ -193,106 +193,6 @@
     color: $yellow;
 }
 
-//start spincube OG
-// .stage-cube-cont {
-//     width: 60%;
-//     height: 100%;
-//     top: 60%;
-//     padding-top: 18%;
-//     margin-left: 0;
-//     position: absolute;
-//     right: 20%;
-//     overflow: hidden;
-//   }
-  
-//   .cube-spinner {
-//     animation-name: spincube;
-//     animation-timing-function: ease-in-out;
-//     animation-iteration-count: infinite;
-//     animation-duration: 12s;
-//     transform-style: preserve-3d;
-//     transform-origin : 2vw 2vw 0;
-//     margin-left: calc(50% - 2vw);
-//     height: 4vw;
-//     width: 4vw;
-  
-//     div {
-//       position: absolute;
-//       width: 4vw;
-//       height: 4vw;
-//       // background: rgba(255,255,255,0.4);
-//       margin: 0 auto;
-//       display: flex;
-//       justify-content: center;
-//       align-items: center;
-//       box-shadow: 0 0 5px 0px $pink;
-//     }
-  
-//     .face1 {
-//       transform: translateZ(2vw)
-//     }
-//     .face2 {
-//       transform: rotateY(90deg) translateZ(2vw)
-//     }
-//     .face3 {
-//       transform: rotateY(90deg) rotateX(90deg) translateZ(2vw)
-//     }
-//     .face4 {
-//       transform: rotateY(180deg) rotateZ(90deg) translateZ(2vw)
-//     }
-//     .face5 {
-//       transform: rotateY(-90deg) rotateZ(90deg) translateZ(2vw)
-//     }
-//     .face6 {
-//       transform: rotateX(-90deg) translateZ(2vw)
-//     }
-//   }
-  
-//   @keyframes spincube {
-//     from,
-//     to {
-//       transform: rotateX(0deg) rotateY(0deg) rotateZ(0deg);
-//     }
-//     16% {
-//       transform: rotateY(-90deg)
-//     }
-//     33% {
-//       transform: rotateY(-90deg) rotateZ(90deg)
-//     }
-//     50% {
-//       transform: rotateY(-180deg) rotateZ(90deg)
-//     }
-//     66% {
-//       transform: rotateY(-270deg) rotateZ(90deg)
-//     }
-//     83% {
-//       transform: rotateX(-90deg) rotateZ(90deg)
-//     }
-//   }
-//   .face img {
-//     height: 70%;
-//     width: 70%;
-//   }
-//   .face1 {
-//     background-color: $green
-//   }
-//   .face2 {
-//     background-color: $orange
-//   }
-//   .face3 {
-//     background-color: $pink
-//   }
-//   .face4 {
-//     background-color: $blue
-//   }
-//   .face5 {
-//     background-color: $yellow
-//   }
-//   .face6 {
-//     background-color: $white
-//   }
-  // end spincube
-
 //start spincube logo
 .stage-cube-cont {
     width: 100%;
@@ -323,7 +223,8 @@
       display: flex;
       justify-content: center;
       align-items: center;
-      box-shadow: 0 0 5px 0px $pink;
+      border: 2px solid $primary-color;
+      // box-shadow: 0 0 5px 0px $pink;
     }
   
     .face1 {
@@ -368,8 +269,8 @@
     }
   }
   .face img {
-    height: 70%;
-    width: 70%;
+    height: 85%;
+    width: 85%;
   }
   .face1 {
     background-color: $green
@@ -389,20 +290,20 @@
   .face6 {
     background-color: $white
   }
-  .face1 img {
-    background-color: $white;
-  }
-  .face3 img {
-    background-color: $white;
-  }
-  .face4 img {
-    background-color: $white;
-  }
+  // .face1 img {
+  //   background-color: $white;
+  // }
+  // .face3 img {
+  //   background-color: $white;
+  // }
+  // .face4 img {
+  //   background-color: $white;
+  // }
   .face5 img {
     rotate: -180deg;
   }
   .face6 img {
-    background-color: $white;
+    // background-color: $white;
     rotate: -90deg;
   }
 //end spincube logo
