--- a/my-app/src/components/Sidebar/index.scss
+++ b/my-app/src/components/Sidebar/index.scss
@@ -33,9 +33,15 @@
     .link-tree li:first-child {
         padding-right: 10px;
     }
+    .logo {
+      position: absolute;
+      bottom: 5vh;
+      left: 93vw;
+      z-index: 999;
+    }
     .logo img {
         margin: 0px auto;
-        width: 50%;
+        width: 30%;
     }
 
     .social {
@@ -71,6 +77,22 @@
     .nav-bar {
         display: block;
     }
+
+    .logo {
+      width: 30%;
+      position: absolute;
+      bottom: 5vh;
+      left: 93vw;
+      z-index: 999;
+      padding: 8px 0;
+  }
+  
+  .logo:hover img {
+      box-sizing: border-box;
+      transition: ease-in .07s;
+      border: 2px solid $primary-color;
+      margin-bottom: 7.75px
+  }
     .logo img {
         display: block;
         margin: 4px auto;
@@ -101,6 +123,7 @@
         padding-right: 5px;
     }
 }
+
 .link-tree {
     list-style-type: none;
     padding-left: 0;
@@ -118,17 +141,6 @@
   }
 }
 
-.logo {
-    display: block;
-    padding: 8px 0;
-}
-
-.logo:hover img {
-    box-sizing: border-box;
-    transition: ease-in .07s;
-    border: 2px solid $primary-color;
-    margin-bottom: 7.75px
-}
 
 .nav-link {
   width: 100%;
@@ -235,15 +247,15 @@
     animation-iteration-count: infinite;
     animation-duration: 12s;
     transform-style: preserve-3d;
-    transform-origin : 3vw 3vw 0;
-    margin-left: calc(50% - 3vw);
-    height: 6vw;
-    width: 6vw;
+    transform-origin : 2.5vw 2.5vw 0;
+    margin-left: calc(50% - 2.5vw);
+    height: 5vw;
+    width: 5vw;
   
     div {
       position: absolute;
-      width: 6vw;
-      height: 6vw;
+      width: 5vw;
+      height: 5vw;
       // background: rgba(255,255,255,0.4);
       margin: 0 auto;
       display: flex;
@@ -254,22 +266,22 @@
     }
   
     .face1 {
-      transform: translateZ(3vw)
+      transform: translateZ(2.5vw)
     }
     .face2 {
-      transform: rotateY(90deg) translateZ(3vw)
+      transform: rotateY(90deg) translateZ(2.5vw)
     }
     .face3 {
-      transform: rotateY(90deg) rotateX(90deg) translateZ(3vw)
+      transform: rotateY(90deg) rotateX(90deg) translateZ(2.5vw)
     }
     .face4 {
-      transform: rotateY(180deg) rotateZ(90deg) translateZ(3vw)
+      transform: rotateY(180deg) rotateZ(90deg) translateZ(2.5vw)
     }
     .face5 {
-      transform: rotateY(-90deg) rotateZ(90deg) translateZ(3vw)
+      transform: rotateY(-90deg) rotateZ(90deg) translateZ(2.5vw)
     }
     .face6 {
-      transform: rotateX(-90deg) translateZ(3vw)
+      transform: rotateX(-90deg) translateZ(2.5vw)
     }
   }
   
